# CommonDataLayer

./: .dockerignore  .editorconfig  .gitignore  .graphqlconfig  404.html  CDLF-0000C-00-rfc-01.html  CDLF-0000E-00-rfc-01.html  CDLF-00010-00-rfc-01.html  CDLF-00011-00-rfc-01.html  CDLF-00012-00-rfc-01.html  CDLF-00013-00-rfc-01.html  CDLF-00014-00-rfc-01.html  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.e2e  README.md  benchmarks.html  book.toml  build.sh  bundle.css  deny.toml  getting_started.html  global.css  how_it_works.html  index.html  print.html  protocol.html  requirements.txt  rust-toolchain  schema.graphql  schemas_and_views.html  searchindex.js  searchindex.json  stability.html  versioning.html
.cargo/: config.toml
api/: Cargo.toml
api/src/: config.rs  error.rs  queries.rs  schema.rs
benchmarking/: Cargo.toml  Dockerfile  README.md  pod.yml  pod2.yml  pod3.yml  pod4.yml  pod_local.yml  pod_local_kafka.yml  pod_local_rabbit.yml  shard.yml
benchmarking/sample_json/: 1.json  2.json  3.json  5.json  6.json  7.json
benchmarking/src/: upload_to_kafka.rs  upload_to_rabbitmq.rs  utils.rs
command-service/: Cargo.toml
command-service/src/: args.rs  lib.rs  main.rs
command-service/src/communication/: error.rs  message.rs  mod.rs  resolution.rs
command-service/src/input/: config.rs  error.rs  mod.rs  service.rs
command-service/src/input/service/: grpc.rs
command-service/src/output/: error.rs  mod.rs
command-service/src/output/druid/: error.rs  mod.rs
command-service/src/output/psql/: config.rs  error.rs  mod.rs
command-service/src/report/: config.rs  error.rs  full_report_sender.rs  mod.rs
crates/api/: Cargo.toml  README.md
crates/api/src/: config.rs  context.rs  error.rs  events.rs  lib.rs  main.rs  queries.rs  schema.rs  settings.rs
crates/cdl-cli/: Cargo.toml  README.md
crates/cdl-cli/src/: args.rs  main.rs  utils.rs
crates/command-service/: Cargo.toml
crates/command-service/src/: args.rs  lib.rs  main.rs  settings.rs
crates/data-router/: Cargo.toml
crates/data-router/src/: config.rs  handler.rs  main.rs  schema.rs  settings.rs
crates/db-shrinker-postgres/: Cargo.toml  README.md
crates/db-shrinker-postgres/src/: main.rs
crates/document-storage/: Cargo.toml  README.md
crates/document-storage/src/: args.rs
crates/dto/: Cargo.toml
crates/dto/src/: edges.rs  ingestion.rs  lib.rs  materialization.rs
crates/edge-registry/: Cargo.toml
crates/edge-registry/src/: args.rs  lib.rs  main.rs  resolve_tree.rs  settings.rs
crates/leader-elector/: Cargo.toml
crates/leader-elector/src/: main.rs
crates/materializer-general/: Cargo.toml
crates/materializer-general/src/: args.rs  lib.rs  main.rs  plugins.rs  settings.rs  view.rs
crates/materializer-ondemand/: Cargo.toml
crates/materializer-ondemand/src/: args.rs  lib.rs  main.rs  settings.rs
crates/object-builder/: .gitignore  Cargo.toml
crates/object-builder/src/: args.rs  buffer_stream.rs  lib.rs  main.rs  object_id_pair.rs  pool.rs  row_builder.rs  settings.rs  sources.rs  utils.rs  view_plan.rs
crates/object-builder/tests/: README.md  array_field.snap  base_schema_field_value.snap  base_schema_inner_field_value.snap  equals_false.snap  equals_raw.snap  equals_true.snap  error_invalid_local_id.snap  error_non_existing_field.snap  error_sub_object_zero_reference.snap  filter_raw_value.snap  filter_schema_field.snap  filter_view_path.snap  joined_field_value.snap  nested_relation.snap  raw_value.snap  review.sh  simple.snap  sub_object_field.snap
crates/partial-update-engine/: Cargo.toml
crates/partial-update-engine/src/: main.rs
crates/query-router/: Cargo.toml  README.md  api.yml
crates/query-router/src/: cache.rs  error.rs  handler.rs  main.rs  schema.rs
crates/query-service/: Cargo.toml
crates/query-service-ts/: Cargo.toml
crates/query-service-ts/src/: druid.rs  lib.rs  main.rs  victoria.rs
crates/query-service/src/: druid.rs  ds.rs  lib.rs  main.rs  psql.rs
crates/rpc/: Cargo.toml  README.md  build.rs
crates/rpc/proto/: command_service.proto  common.proto  edge_registry.proto  generic.proto  materializer.proto  materializer_general.proto  materializer_ondemand.proto  object_builder.proto  query_service.proto  query_service_ts.proto  schema_registry.proto
crates/rpc/src/: edge_registry.rs  error.rs  generic.rs  lib.rs  materializer.rs  materializer_general.rs  materializer_ondemand.rs  object_builder.rs  query_service.rs  query_service_ts.rs  schema_registry.rs  utils.rs
crates/schema-registry/: Cargo.toml  README.md  sqlx-data.json
crates/schema-registry/migrations/: 20210215170655_init-db.sql
crates/schema-registry/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  rpc.rs  settings.rs  types.rs  utils.rs  validation.rs
crates/types/: Cargo.toml
crates/types/src/: schemas.rs
data-router/: Cargo.toml
data-router/src/: main.rs
e2e/: Cargo.toml  pod.yml  test.sh
e2e/src/: api.rs  edge_registry.rs  lib.rs  object_builder.rs  postgres_materializer.rs
e2e/src/on_demand_materializer/: computed_fields.rs  filtering.rs  mod.rs  relations.rs  simple_views.rs
query-router/: Cargo.toml  README.md  api.yml
query-router/src/: cache.rs  error.rs  handler.rs  main.rs
rpc/: Cargo.toml  build.rs
rpc/proto/: blob_storage.proto  command_service.proto  document_storage.proto  query_service.proto  query_service_ts.proto  schema_registry.proto
rpc/src/: blob_storage.rs  command_service.rs  document_storage.rs  error.rs  lib.rs  query_service.rs  query_service_ts.rs  schema_registry.rs
schema-registry/: Cargo.toml  README.md
schema-registry/proto/: registry.proto
schema-registry/src/: db.rs  error.rs  lib.rs  main.rs  rpc.rs  schema.rs  types.rs
schema-registry/src/replication/: master.rs  mod.rs  slave.rs
utils/: Cargo.toml
utils/src/: lib.rs  message_types.rs  psql.rs  task_limiter.rs
utils/src/messaging_system/: consumer.rs  message.rs  metadata_fetcher.rs  mod.rs  publisher.rs
xtask/: Cargo.toml
xtask/src/: check_docs.rs  codegen.rs  main.rs
xtask/src/config_generator/: defaults.rs  mod.rs  start.sh.base
(+791 files in other folders)
