[workspace]
members = [
    "api",
    "blob-store",
    "benchmarking",
    "cdl-cli",
    "command-service",
    "data-router",
    "document-storage",
    "db-shrinker-postgres",
    "leader-elector",
    "query-router",
    "query-service",
    "query-service-ts",
    "rpc",
    "schema-registry",
]

[profile.release]
lto = true
codegen-units = 1
