[package]
name = "benchmarking"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "upload-to-kafka"
path = "src/upload_to_kafka.rs"

[[bin]]
name = "upload-to-rabbitmq"
path = "src/upload_to_rabbitmq.rs"

[dependencies]
anyhow      = "1.0.40"
pbr         = "1.0.4"
rdkafka     = "0.26.0"
lapin       = "1.7.1"
clap        = "3.0.0-beta.2"
serde_json  = "1.0.64"
serde       = { version = "1.0.126", features = ["derive"] }
uuid        = { version = "0.8.2", features = ["v4", "serde"] }
tokio       = { version = "1.6.1", features = ["rt-multi-thread", "macros", "sync"] }
