[package]
name = "command-service"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "command_service"
path = "src/lib.rs"

[[bin]]
name = "command-service"
path = "src/main.rs"

[dependencies]
anyhow      = "1.0"
async-trait = "0.1"
bb8         = "0.4"
env_logger  = "0.8"
futures     = "0.3"
itertools   = "0.9"
log         = "0.4"
rdkafka     = { version = "0.24", features = ["cmake-build"] }
reqwest     = "0.10"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
structopt   = "0.3"
thiserror   = "1.0"
tokio       = { version = "0.2", features = ["rt-threaded", "macros", "sync"] }
tonic       = "0.3"
utils       = { path = "../utils" }
url         = "2.1"
uuid        = { version = "0.8", features = ["v1", "serde"] }
bb8-postgres            = { version = "0.4", features = ["with-uuid-0_8", "with-serde_json-1"] }
document-storage        = { path = "../document-storage" }
futures-util            = "0.3"

[dev-dependencies]
test-case = "1.0"
