[package]
name = "e2e"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[lib]
name = "e2e"
path = "src/lib.rs"

[dependencies]
# Workspace
cdl_api     = { path = "../crates/api", package="api" }

# Crates.io
anyhow      = "1.0.40"
tokio       = { version = "1.6.1", features = ["rt-multi-thread", "macros"] }
serde       = { version = "1.0.126", features = ["derive"] }
serde_json  = "1.0.64"
lazy_static = "1.4.0"
reqwest     = { version = "0.11.3", features = ["json"] }
uuid        = { version = "0.8.2", features = ["v4", "serde"] }
