[package]
name = "e2e"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[lib]
name = "e2e"
path = "src/lib.rs"

[features]
default = []
e2e = []

[dependencies]
# Workspace
cdl_api     = { path = "../crates/api", package="api" }
cdl_dto     = { path = "../crates/dto"}
cdl_rpc     = { path = "../crates/rpc", package="rpc" }

# Crates.io
anyhow      = "1.0.40"
lazy_static = "1.4.0"
reqwest     = { version = "0.11.3", features = ["json"] }
serde       = { version = "1.0.126", features = ["derive"] }
serde_json  = "1.0.64"
tokio       = { version = "1.6.1", features = ["rt-multi-thread", "macros"] }
uuid        = { version = "0.8.2", features = ["v4", "serde"] }
bb8-postgres            = { version = "0.7.0", features = ["with-uuid-0_8", "with-serde_json-1"] }
