[package]
name = "query-router"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "query-router"
path = "src/main.rs"

[dependencies]
warp        = "0.2"
anyhow      = "1.0"
lru-cache   = "0.1"
serde_json  = "1.0"
structopt   = "0.3"
utils       = { path = "../utils/" }
uuid        = { version = "0.8", features = ["v1", "serde"] }
tokio       = { version = "0.2", features = ["macros"] }
query-service           = { path = "../query-service/" }
schema-registry         = { path = "../schema-registry/" }
