[package]
name = "rpc"
version = "0.1.0"
authors = ["Sam Mohr <samuel.mohr@hitachi-powergrids.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic       = "0.3"
prost       = "0.6"
anyhow      = "1.0"
thiserror   = "1.0"
serde       = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = { version = "0.3", default-features = false, features = ["prost", "transport"] }
