[package]
name = "schema-registry"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "schema_registry"
path = "src/lib.rs"

[[bin]]
name = "schema-registry"
path = "src/main.rs"

[dependencies]
# Workspace
utils       = { path = "../utils" }
rpc         = { path = "../rpc" }

# Crates.io
anyhow      = "1.0"
env_logger  = "0.8"
envy        = "0.4"
futures     = "0.3"
log         = "0.4"
indradb-lib = { git = "https://github.com/jespersm/indradb", branch = "sled", features = ["sled-datastore"] } # We use fork due to reported incompatibility of sled 0.34 with azure k8s. More testing needed before switching to official build.
jmespatch   = "0.3"
jsonschema  = "0.4"
lazy_static = "1.4"
semver      = { version = "0.11", features = ["serde"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "1.0"
tokio       = { version = "0.2", features = ["macros"] }
tonic       = "0.3"
url         = "2.1"
uuid        = { version = "0.8", features = ["v1", "serde"] }
chrono      = "0.4.19"
