[package]
name = "utils"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
anyhow      = "1.0"
hyper       = "0.13"
lazy_static = "1.4"
log         = "0.4"
metrics     = { version = "0.12", features = ["std"] }
tokio       = { version = "0.2", features = ["rt-core"] }
metrics-exporter-http   = "0.3"
metrics-runtime         = "0.13"
metrics-observer-prometheus         = "0.1"
