[package]
name = "xtask"
version = "0.1.0"
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
settings_utils = { path = "../crates/utils/settings" }

anyhow      = "1.0.43"
dialoguer   = "0.8.0"
itertools   = "0.10.1"
pico-args   = "0.4.2"
toml        = "0.5.8"
serde       = { version = "1.0.127", features = ["derive"] }
tonic-build = { version = "0.5.2", default-features = false, features = ["prost", "transport"] }
xshell      = "0.1.14"
dialoguer_trait          = "0.2.0"
erased-serde             = "0.3.16"
