[package]
name = "api"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }

# Crates.io
anyhow      = "1.0"
async-trait = "0.1"
bb8         = "0.4"
itertools   = "0.10"
num-derive  = "0.3"
num-traits  = "0.2"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
structopt   = "0.3"
thiserror   = "1.0"
tokio       = { version = "0.2", default-features = false, features = ["sync", "rt-threaded", "macros", "time"] }
futures     = "0.3"
tracing     = "0.1"
uuid        = { version = "0.8", features = ["v4", "serde"] }
warp        = "0.2"
reqwest     = { version = "=0.10.10", features = ["json"] }
async-stream            = "0.3"
async-graphql           = { version = "=2.4.11", features = ["uuid"] }
async-graphql-warp      = "=2.4.11"
tracing-futures         = "0.2"
