[package]
name = "api"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }

# Crates.io
anyhow      = "1.0"
async-trait = "0.1"
bb8         = "0.7"
itertools   = "0.10"
semver      = { version = "0.11", features = ["serde"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "1.0"
tokio       = { version = "1.6", default-features = false, features = ["sync", "rt-multi-thread", "macros"] }
futures     = "0.3"
tracing     = "0.1"
uuid        = { version = "0.8", features = ["v4", "serde"] }
warp        = "0.3"
reqwest     = { version = "0.11", features = ["json"] }
async-stream            = "0.3"
async-graphql           = { version = "2.6", features = ["uuid", "opentelemetry", "tracing-futures", "tracinglib"] }
async-graphql-warp      = "2.8"
tracing-futures         = "0.2"
