[package]
name = "api"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "api"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
# Workspace
cdl_dto     = { path = "../dto" }
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }
communication_utils     = { path = "../utils/crates/communication" }
tracing_utils           = { path = "../utils/crates/tracing", features = ["http"] }

# Crates.io
anyhow      = "1.0.40"
async-trait = "0.1.50"
bb8         = "0.7.0"
itertools   = "0.10.0"
semver      = { version = "1.0.3", features = ["serde"] }
serde       = { version = "1.0.126", features = ["derive"] }
serde_json  = "1.0.64"
thiserror   = "1.0.25"
tokio       = { version = "1.6.1", default-features = false, features = ["sync", "rt-multi-thread", "macros"] }
futures     = "0.3.15"
tracing     = "0.1.26"
uuid        = { version = "0.8.2", features = ["v4", "serde"] }
warp        = "0.3.1"
reqwest     = { version = "0.11.3", features = ["json"] }
async-stream            = "0.3.2"
async-graphql           = { version = "2.9.0", features = ["uuid", "opentelemetry", "tracing-futures", "tracinglib"] }
async-graphql-warp      = "2.9.0"
tracing-futures         = "0.2.5"
