[package]
name = "cdl-cli"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "cdl"
path = "src/main.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }

# Crates.io
anyhow      = "1.0"
clap        = "3.0.0-beta.2"
semver      = { version = "0.11", features = ["serde"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1.6", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs"] }
tonic       = "0.4"
uuid        = { version = "0.8", features = ["v4", "serde"] }
