[package]
name = "cdl-cli"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "cdl"
path = "src/main.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }
cdl_dto     = { path = "../dto" }
tracing_utils           = { path = "../utils/crates/tracing" }

# Crates.io
anyhow      = "1.0.43"
clap        = "3.0.0-beta.4"
serde       = { version = "1.0.127", features = ["derive"] }
serde_json  = "1.0.66"
tokio       = { version = "1.10.0", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs"] }
tonic       = "0.5.2"
uuid        = { version = "0.8.2", features = ["v4", "serde"] }
