[package]
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"
name = "command-service"
version = "0.1.0"

[lib]
name = "command_service"
path = "src/lib.rs"

[[bin]]
name = "command-service"
path = "src/main.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }

# Crates.io
anyhow      = "1.0"
async-trait = "0.1"
bb8         = "0.4"
fnv         = "1.0"
futures     = "0.3"
rdkafka     = { version = "0.24", features = ["cmake-build"] }
reqwest     = "0.10"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
structopt   = "0.3"
thiserror   = "1.0"
tokio       = { version = "0.2", features = ["rt-threaded", "macros", "sync"] }
tonic       = "0.3"
tracing     = "0.1"
url         = "2.2"
uuid        = { version = "0.8", features = ["v1", "serde"] }
bb8-postgres            = { version = "0.4", features = ["with-uuid-0_8", "with-serde_json-1"] }

[dev-dependencies]
test-case = "1.1"
