[package]
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"
name = "command-service"
version = "0.1.0"

[lib]
name = "command_service"
path = "src/lib.rs"

[[bin]]
name = "command-service"
path = "src/main.rs"

[dependencies]
# Workspace
cdl_dto     = { path = "../dto" }
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
task_utils  = { path = "../utils/crates/task" }
utils       = { path = "../utils" }
communication_utils     = { path = "../utils/crates/communication" }
tracing_utils           = { path = "../utils/crates/tracing" }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }

# Crates.io
anyhow      = "1.0.40"
async-trait = "0.1.50"
bb8         = "0.7.0"
fnv         = "1.0.7"
futures     = "0.3.15"
rdkafka     = { version = "0.26.0", features = ["cmake-build"] }
reqwest     = "0.11.3"
serde       = { version = "1.0.126", features = ["derive"] }
serde_json  = "1.0.64"
thiserror   = "1.0.25"
tokio       = { version = "1.6.1", features = ["rt-multi-thread", "macros", "sync"] }
tonic       = "0.4.3"
tracing     = "0.1.26"
url         = "2.2.2"
uuid        = { version = "0.8.2", features = ["v4", "serde"] }
bb8-postgres            = { version = "0.7.0", features = ["with-uuid-0_8", "with-serde_json-1"] }

[dev-dependencies]
test-case = "1.1.0"
