[package]
name = "data-router"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "data-router"
path = "src/main.rs"

[dependencies]
# Workspace
cdl_dto     = { path = "../dto" }
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
task_utils  = { path = "../utils/crates/task" }
utils       = { path = "../utils" }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }
communication_utils     = { path = "../utils/crates/communication" }
tracing_utils           = { path = "../utils/crates/tracing" }

# Crates.io
anyhow      = "1.0"
async-trait = "0.1"
lru-cache   = "0.1"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1.6", features = ["macros"] }
tracing     = "0.1"
url         = { version = "2.2", features = ["serde"] }
uuid        = { version = "0.8", features = ["v1", "serde"] }
