[package]
name = "data-router"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "data-router"
path = "src/main.rs"

[dependencies]
# Workspace
cdl_dto     = { path = "../dto" }
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
task_utils  = { path = "../utils/crates/task" }
utils       = { path = "../utils" }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }
communication_utils     = { path = "../utils/crates/communication" }
tracing_utils           = { path = "../utils/crates/tracing" }

# Crates.io
anyhow      = "1.0.40"
async-trait = "0.1.50"
lru-cache   = "0.1.2"
serde       = { version = "1.0.126", features = ["derive"] }
serde_json  = "1.0.64"
tokio       = { version = "1.6.1", features = ["macros"] }
tracing     = "0.1.26"
url         = { version = "2.2.2", features = ["serde"] }
uuid        = { version = "0.8.2", features = ["v1", "serde"] }
