[package]
name = "data-router"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "data-router"
path = "src/main.rs"

[dependencies]
# Workspace
cdl_dto     = { path = "../dto" }
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
task_utils  = { path = "../utils/crates/task" }
utils       = { path = "../utils" }
cache       = { path = "../utils/crates/cache" }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }
communication_utils     = { path = "../utils/crates/communication" }
tracing_utils           = { path = "../utils/crates/tracing" }

# Crates.io
anyhow         = "1.0.40"
async-trait    = "0.1.50"
serde          = { version = "1.0.126", features = ["derive"] }
serde_json     = "1.0.64"
tokio          = { version = "1.6.1", features = ["macros"] }
tracing        = "0.1.26"
url            = { version = "2.2.2", features = ["serde"] }
uuid           = { version = "0.8.2", features = ["v1", "serde"] }

# lenient_semver was added because basic semver can not into short version (i.e. 1.0)
# it panics, and can't really be worked around in a decent way.
# there is also a bunch of tests checking if that changes in the future.
lenient_semver = { version = "0.4.2", features = ["version_serde"] }
