[package]
name = "db-shrinker-postgres"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "db-shrinker-postgres"
path = "src/main.rs"

[dependencies]
postgres    = { version = "0.19", features = ["with-uuid-0_8", "with-serde_json-1"] }
structopt   = "0.3"
anyhow      = "1.0"
uuid        = "0.8"
serde_json  = "1.0"
log         = "0.4"
env_logger  = "0.8"

[dev-dependencies]
test-case = "1.0"
