[package]
name    = "document-storage"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "document-storage"
path = "src/main.rs"

[lib]
name = "document_storage"
path = "src/lib.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }

# Crates.io
anyhow      = "1.0"
env_logger  = "0.8"
log         = "0.4"
sled        = "0.34"
structopt   = { version = "0.3", default-features = false }
tokio       = { version = "0.2", default-features = false, features = ["sync", "rt-threaded", "macros"] }
tonic       = "0.3"
uuid        = { version = "0.8", features = ["v1", "serde"] }
