[package]
name = "cdl_dto"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
rpc         = { path    = "../rpc" }

# Crates.io
anyhow      = "1.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0", features = ["raw_value"] }
thiserror   = "1.0"
uuid        = { version = "0.8", features = ["v4", "serde"] }
tonic                   = "0.4"
async-graphql           = { version = "2.6", features = ["uuid", "opentelemetry", "tracing-futures", "tracinglib"] }
