[package]
name = "cdl_dto"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
rpc         = { path    = "../rpc" }

# Crates.io
anyhow      = "1.0.40"
serde       = { version = "1.0.126", features = ["derive"] }
serde_json  = { version = "1.0.64", features = ["raw_value"] }
thiserror   = "1.0.25"
uuid        = { version = "0.8.2", features = ["v4", "serde"] }
tonic                   = "0.4.3"
async-graphql           = { version = "2.9.0", features = ["uuid", "opentelemetry", "tracing-futures", "tracinglib"] }
