[package]
name = "edge-registry"
version = "0.1.0"
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "edge-registry"
path = "src/main.rs"

[lib]
name = "edge_registry"
path = "src/lib.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }

# Crates.io
anyhow      = "1.0"
async-trait = "0.1"
clap        = "3.0.0-beta.2"
futures     = "0.3"
itertools   = "0.10"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1.5", features = ["rt-multi-thread", "macros", "sync"] }
tonic       = "0.4"
tracing     = "0.1"
uuid        = "0.8"
bb8-postgres             = { version = "0.7", features = ["with-uuid-0_8"] }
tracing-futures          = "0.2"
