[package]
name = "edge-registry"
version = "0.1.0"
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "edge-registry"
path = "src/main.rs"

[lib]
name = "edge_registry"
path = "src/lib.rs"

[dependencies]
# Workspace
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }
communication_utils     = { path = "../utils/crates/communication" }
tracing_utils           = { path = "../utils/crates/tracing" }

# Crates.io
anyhow      = "1.0"
async-trait = "0.1"
futures     = "0.3"
itertools   = "0.10"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "1.0"
tokio       = { version = "1.6", features = ["rt-multi-thread", "macros", "sync"] }
tonic       = "0.4"
tracing     = "0.1"
uuid        = "0.8"
bb8-postgres             = { version = "0.7", features = ["with-uuid-0_8"] }
tracing-futures          = "0.2"
