[package]
name = "edge-registry"
version = "0.1.0"
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "edge-registry"
path = "src/main.rs"

[lib]
name = "edge_registry"
path = "src/lib.rs"

[dependencies]
# Workspace
misc_utils  = { path = "../utils/misc" }
rpc         = { path = "../rpc" }
settings_utils          = { path = "../utils/settings" }
metrics_utils           = { path = "../utils/metrics" }
communication_utils     = { path = "../utils/communication" }
tracing_utils           = { path = "../utils/tracing" }
notification_utils      = { path = "../utils/notifications" }
service_health_utils    = { path = "../utils/service_health" }

# Crates.io
anyhow      = "1.0.43"
async-trait = "0.1.51"
futures     = "0.3.16"
itertools   = "0.10.1"
serde       = { version = "1.0.127", features = ["derive"] }
serde_json  = "1.0.66"
thiserror   = "1.0.26"
tokio       = { version = "1.10.0", features = ["rt-multi-thread", "macros", "sync"] }
tonic       = "0.5.2"
tracing     = "0.1.26"
uuid        = "0.8.2"
bb8-postgres             = { version = "0.7.0", features = ["with-uuid-0_8"] }
