[package]
edition = "2018"
authors = ["CDL Team"]
name = "leader-elector"
version = "0.1.0"
license = "Apache-2.0"

[[bin]]
name = "leader-elector"
path = "src/main.rs"

[dependencies]
# Workspace
utils                   = { path = "../utils" }
schema-registry         = { path = "../schema-registry" }

# Crates.io
anyhow      = "1.0"
env_logger  = "0.8"
envy        = "0.4"
futures     = "0.3"
k8s-openapi = { version = "0.10", default-features = false, features = ["v1_18"] }
kube        = "0.46"
log         = "0.4"
serde       = "1.0"
serde_json  = "1.0"
serde_yaml  = "0.8"
tokio       = { version = "0.2", features = ["rt-core"] }
futures-util            = "0.3"
