[package]
name = "materializer-general"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
cdl_dto     = { path = "../dto" }
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }
cache       = { path = "../utils/crates/cache" }
communication_utils     = { path = "../utils/crates/communication" }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }
tracing_utils           = { path = "../utils/crates/tracing" }

# Crates.io
anyhow      = "1.0.40"
async-trait = "0.1.50"
futures     = "0.3.15"
itertools   = "0.10.0"
serde       = { version = "1.0.126", features = ["derive"] }
serde_json  = "1.0.64"
tokio       = { version = "1.6.1", features = ["rt-multi-thread", "macros", "sync"] }
tonic       = "0.4.3"
tracing     = "0.1.26"
uuid        = "0.8.2"
bb8-postgres            = { version = "0.7.0", features = ["with-uuid-0_8", "with-serde_json-1"] }
tracing-futures         = "0.2.5"
