[package]
name = "materializer-general"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
cdl_dto     = { path = "../dto" }
misc_utils  = { path = "../utils/misc" }
rpc         = { path = "../rpc" }
cache       = { path = "../utils/cache" }
communication_utils     = { path = "../utils/communication" }
settings_utils          = { path = "../utils/settings" }
metrics_utils           = { path = "../utils/metrics" }
tracing_utils           = { path = "../utils/tracing" }
notification_utils      = { path = "../utils/notifications" }
service_health_utils    = { path = "../utils/service_health" }

# Crates.io
anyhow      = "1.0.43"
async-trait = "0.1.51"
futures     = "0.3.16"
hex         = "0.4.3"
itertools   = "0.10.1"
serde       = { version = "1.0.127", features = ["derive"] }
serde_json  = "1.0.66"
sha2        = "0.9.5"
tokio       = { version = "1.10.0", features = ["rt-multi-thread", "macros", "sync"] }
tonic       = "0.5.2"
tracing     = "0.1.26"
uuid        = "0.8.2"
bb8-postgres            = { version = "0.7.0", features = ["with-uuid-0_8", "with-serde_json-1"] }
elasticsearch           = "7.12.1-alpha.1"
tracing-futures         = "0.2.5"
