[package]
name = "materializer-ondemand"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[dependencies]
# Workspace
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }
tracing_utils           = { path = "../utils/crates/tracing" }

# Crates.io
anyhow      = "1.0"
async-trait = "0.1"
futures     = "0.3"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1.6", features = ["rt-multi-thread", "macros", "sync"] }
tonic       = "0.4"
tracing     = "0.1"
uuid        = "0.8"
tracing-futures         = "0.2"
