[package]
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"
name = "object-builder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "object-builder"
path = "src/main.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }

# Crates.io
anyhow      = "1.0"
async-trait = "0.1"
futures     = "0.3"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
structopt   = "0.3"
thiserror   = "1.0"
tokio       = { version = "1.4", features = ["rt-multi-thread", "macros", "sync"] }
tonic       = "0.4"
tracing     = "0.1"
uuid        = { version = "0.8", features = ["v1", "serde"] }
tracing-futures         = "0.2"
