[package]
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"
name = "object-builder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "object-builder"
path = "src/main.rs"

[dependencies]
# Workspace
cdl_dto     = { path = "../dto" }
misc_utils  = { path = "../utils/crates/misc" }
rpc         = { path = "../rpc" }
utils       = { path = "../utils" }
communication_utils     = { path = "../utils/crates/communication" }
tracing_utils           = { path = "../utils/crates/tracing" }
settings_utils          = { path = "../utils/crates/settings" }
metrics_utils           = { path = "../utils/crates/metrics" }

# Crates.io
anyhow      = "1.0.40"
async-trait = "0.1.50"
bb8         = "0.7.0"
futures     = "0.3.15"
maplit      = "1.0.2"
serde       = { version = "1.0.126", features = ["derive"] }
serde_json  = "1.0.64"
thiserror   = "1.0.25"
tokio       = { version = "1.6.1", features = ["rt-multi-thread", "macros", "sync"] }
tonic       = "0.4.3"
tracing     = "0.1.26"
uuid        = { version = "0.8.2", features = ["v1", "serde"] }
pin-project-lite        = "0.2.6"
tokio-stream            = "0.1.6"
tracing-futures         = "0.2.5"

[dev-dependencies]
test-case   = "1.1.0"
snapshot-runner         = { git = "https://github.com/frondeus/snapshot-runner.git" }
